--- a/css/index.css
+++ b/css/index.css
@@ -320,8 +320,10 @@ header .socialmedia {
 
 /* footer section */
 footer {
+  border-top: 1px rgb(225, 239, 230) solid;
   width: 100%;
-  height: auto;
+  margin: 0 auto;
+  height: 100%;
   padding-top: 2.5vh;
   font-size: 3rem;
   background-color: rgb(0, 4, 17);
@@ -330,10 +332,42 @@ footer {
 /* mobile media query */
 @media (max-width: 428px) {
   /* header section */
+  header {
+    width: 100%;
+    height: 100vh;
+    background-image: url("../img/home-header.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    text-align: center;
+  }
+  header .opaque {
+    background-color: rgb(0, 4, 17, 0.8);
+    height: 40%;
+  }
 
+  h1 {
+    font-size: 5.5rem;
+    padding: 2%;
+  }
+
+  .links {
+    display: flex;
+    flex-direction: column;
+  }
   /* gallery section */
   .gallery {
     height: auto;
+  }
+
+  .gallery div {
+    display: flex;
+    flex-flow: column nowrap;
+    width: 100%;
+  }
+  .gallery div img {
+    width: 100%;
+    padding-top: 5%;
   }
 
   /* about us section */
@@ -379,5 +413,12 @@ footer {
     height: auto;
     padding-top: 2.5vh;
     font-size: 2rem;
+  }
+
+  footer .email {
+    text-align: center;
+  }
+  footer .links {
+    text-align: center;
   }
 }
