--- a/css/menu.css
+++ b/css/menu.css
@@ -232,33 +232,146 @@ header .socialmedia {
   background-repeat: no-repeat;
 }
 
+.shaded {
+  background-color: rgb(0, 4, 17, 0.8);
+}
+
+.shaded h2 {
+  text-align: center;
+  padding: 5%;
+}
+.menu-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  width: 100%;
+}
+.menu-section {
+  width: 40%;
+  padding: 5%;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-around;
+}
+
+h4 {
+  font-size: 3rem;
+  display: inline;
+}
+
+h4 .cost {
+  margin-left: 0;
+}
+
+.menu-section p {
+  font-size: 2em;
+  width: 35%;
+}
+
 /* footer section */
 footer {
   width: 100%;
-  height: 15vh;
+  height: auto;
   padding-top: 2.5vh;
   font-size: 3rem;
+  background-color: rgb(0, 4, 17);
 }
 
 /* mobile media query */
 @media (max-width: 428px) {
   /* header section */
-  .header-title {
-    width: 75%;
+  h1 {
+    font-weight: 400;
     margin: 0 auto;
+    width: 80%;
+    font-size: 1.5em;
     text-align: center;
-    font-size: 4rem;
+    margin-bottom: 5%;
+  }
+  nav div {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
   }
 
-  /* menu */
-  .menu {
-    background-image: none;
+  nav a {
+    margin: 0 auto;
+    color: rgb(225, 239, 230);
+  }
+  .shadedbox1 {
+    background-color: rgba(0, 4, 14, 0.8);
+  }
+  .socials {
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row;
+    width: 30%;
+    margin: 0 auto;
+  }
+  .gallery img {
+    padding-bottom: 5%;
+    padding-top: 5%;
+  }
+  .socials a {
+    color: rgb(225, 239, 230);
+  }
+  .spacer-sm {
+    height: 10vh;
+  }
+  .shadedbox {
+    background-color: rgb(225, 239, 230);
+    width: 100%;
+  }
+  .shadedbox * {
+    color: rgb(0, 4, 17);
+    width: 100%;
+  }
+  h2 {
+    width: 80%;
+    margin: 0 auto;
+    border-bottom: 20px solid rgb(0, 4, 17);
+  }
+  .menu-container {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+  }
+  .menu-item {
+    display: flex;
+    justify-content: center;
+    flex-flow: column;
+    border-bottom: 5px rgb(0, 4, 17) solid;
+    width: 100%;
+  }
+  h3 {
+    text-align: center;
+    border: 5px rgb(0, 4, 17) solid;
+    width: 60%;
+  }
+  h4 {
+    text-align: center;
+  }
+  .menu-item p {
+    text-align: center;
+    margin: 0 auto;
   }
 
-  /* footer section */
   footer {
     height: auto;
     padding-top: 2.5vh;
     font-size: 2rem;
+  }
+  form {
+    text-align: center;
+    margin: 0 auto;
+    font-size: 2em;
+    width: 90%;
+    padding-bottom: 5%;
+  }
+  form input {
+    font-size: 0.8em;
+  }
+  .copyright {
+    font-size: 0.4em;
   }
 }
