--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,5 @@
+@import url("/menu.html");
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -135,6 +137,7 @@ table {
 html {
   max-width: 1920px;
   min-width: 428px;
+  width: 100%;
   font-size: 62.5%;
 }
 
@@ -153,7 +156,6 @@ p,
 a,
 i {
   text-decoration: none;
-  color: rgb(225, 239, 230);
 }
 
 h1 {
@@ -168,47 +170,86 @@ h3 {
   font-size: 5rem;
 }
 
-h4 {
-  font-size: 4rem;
-}
-
 p,
 a {
   font-size: 3rem;
 }
 
-/* header section */
-header {
-  width: 100%;
-  height: 100vh;
-  background-image: url("../img/menu-header.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  text-align: center;
+/* CSS variables are established to make color picking super easy*/
+html {
+  color: rgb(225, 239, 230);
 }
 
-header .opaque {
-  background-color: rgb(0, 4, 17, 0.8);
-  height: 20%;
+/* Desktop Version */
+.shadedbox1 {
+  background-color: rgba(0, 4, 14, 0.8);
 }
-
-header .links {
-  text-decoration: none;
+nav div {
   display: flex;
   justify-content: space-around;
 }
-
-header .socialmedia {
+nav a {
+  color: rgb(225, 239, 230);
+}
+h1 {
+  text-align: center;
+  padding-bottom: 2%;
+  color: rgb(225, 239, 230);
+}
+.socials {
+  width: 30%;
   display: flex;
+  margin: 0 auto;
   justify-content: center;
 }
-
-.socialmedia a {
-  margin: auto 2%;
+.socials a {
+  padding: 8%;
+  font-size: 4em;
+  color: rgb(225, 239, 230);
 }
 
-/* spacer */
+.gallery div {
+  width: 70%;
+  margin: 0 auto;
+}
+.gallery div img {
+  width: 20vw;
+  padding: 1%;
+}
+.bottomnav {
+  display: inline;
+}
+input,
+label {
+  padding-inline: 0%;
+  margin-left: 10%;
+}
+.bottomnav a {
+  padding-inline: 3%;
+}
+.copyright {
+  font-size: 0.5em;
+  padding-left: 60%;
+}
+.footer {
+  padding-bottom: 5%;
+}
+.footerbackground {
+  background-color: rgb(0, 4, 17);
+}
+
+/* header section */
+
+header {
+  width: 100%;
+  height: 100vh;
+  background-image: url("../img/home-header.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+/* spacers */
 .spacer {
   width: 100%;
   height: 20vh;
@@ -220,25 +261,95 @@ header .socialmedia {
   background-color: rgb(0, 4, 17);
 }
 
-/* menu */
-
-.menu {
+/* gallery section */
+.gallery {
   width: 100%;
-  height: auto;
-  background-image: url("../img/staff-bartender.jpg");
+  height: 100vh;
+  text-align: center;
   background-color: rgb(0, 4, 17);
+}
+
+/* about us section */
+.about {
+  width: 100%;
+  height: 75vh;
+  text-align: center;
+  background-image: url("../img/staff-cooks.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
 }
 
-.shaded {
+.about-container {
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(0, 4, 17, 0.8);
+  color: rgb(225, 239, 230);
+}
+
+.about h2 {
+  width: 100%;
+}
+
+.about-container .text {
+  width: 50%;
+}
+
+/* contact us section */
+.contact {
+  text-align: center;
+  background-image: url("../img/jumbo-restaurant.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: rgb(0, 4, 17);
+}
+
+.contact-container {
+  width: 100%;
+  height: 100%;
   background-color: rgb(0, 4, 17, 0.8);
 }
 
-.shaded h2 {
-  text-align: center;
-  padding: 5%;
+.contact h2 {
+  padding-top: 5vh;
+}
+
+.contact h3 {
+  padding-top: 2.5vh;
+}
+
+.contact p {
+  padding: 0.5vh 0;
+}
+
+.info {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.address {
+  width: 25%;
+}
+
+.hours {
+  width: 25%;
+  padding-bottom: 2.5vh;
+}
+
+.contacts {
+  width: 25%;
+}
+
+.menu {
+  background-image: url(../img/staff-bartender.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .menu-container {
   display: flex;
@@ -253,16 +364,23 @@ header .socialmedia {
   flex-flow: column;
   justify-content: space-around;
 }
-
-h4 {
-  font-size: 3rem;
+.menu-item {
+}
+h3 {
+  font-size: 4em;
   display: inline;
 }
-
-h4 .cost {
-  margin-left: 0;
+h2 {
+  display: block;
+  text-align: center;
 }
-
+.cost {
+  margin-right: 0;
+}
+h4 {
+  font-size: 3em;
+  display: inline;
+}
 .menu-section p {
   font-size: 2em;
   width: 35%;
@@ -270,11 +388,18 @@ h4 .cost {
 
 /* footer section */
 footer {
-  width: 100%;
-  height: auto;
+  border-top: 1px rgb(225, 239, 230) solid;
+  width: 80%;
+  margin: 0 auto;
+  height: 15vh;
   padding-top: 2.5vh;
   font-size: 3rem;
   background-color: rgb(0, 4, 17);
+}
+
+#phone,
+#email {
+  color: rgb(225, 239, 230);
 }
 
 /* mobile media query */
